<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Work Time App</string>
    <string name="hello_world">Hello Worker!</string>
    <string name="menu_settings">Settings</string>
    <string name="button_clear">Clear</string>
    <string name="button_in">In</string>
    <string name="button_start_break">Start Break</string>
    <string name="button_stop_break">Stop Break</string>
    <string name="button_out">Out</string>
	<string name="full_break_time">break_time</string>
	<string name="working_status">working_status</string>
	<string name="start_work">start_work</string>
	<string name="stop_work">stop_work</string>
	<string name="start_break">start_break</string>
	
</resources>